tests/old/fail/syntax/u8_fail.leo
function main() {
    const u8 = 0u32;
}